Descriptions and cactus stump added

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,8 @@
 {
 	"entities": {
 		"trees": {
-			"stump": "Tree Stump"
+			"stump": "Tree Stump",
+			"stump_description": "Not a tree anymore"
 		}
 	}
 }
