--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -1,7 +1,8 @@
 {
 	"entities": {
 		"trees": {
-			"stump": "Toco de Árvore"
+			"stump": "Toco de Árvore",
+			"stump_description": "Não é mais uma árvore"
 		}
 	}
 }
